--- a/Lab1-UI/src/main/res/layout/activity_personal_data.xml
+++ b/Lab1-UI/src/main/res/layout/activity_personal_data.xml
@@ -25,53 +25,53 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+
     <EditText
         android:id="@+id/textNombre"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_margin="25sp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="25dp"
         android:backgroundTint="@android:color/darker_gray"
         android:ems="30"
         android:fontFamily="sans-serif-smallcaps"
         android:hint="Nombre"
         android:inputType="textPersonName"
-        android:textColor="@color/black"
-        android:textStyle="bold"
         android:padding="5sp"
+        android:textColor="@color/black"
         android:textSize="25sp"
-        android:layout_margin="25sp"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.86"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/infoPersonal" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <EditText
         android:id="@+id/textApellido"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_margin="25sp"
         android:backgroundTint="@android:color/darker_gray"
         android:ems="30"
         android:fontFamily="sans-serif-smallcaps"
         android:hint="Apellidos"
         android:inputType="textPersonName"
-        android:textColor="@color/black"
-        android:textStyle="bold"
         android:padding="5sp"
+        android:textColor="@color/black"
         android:textSize="25sp"
-        android:layout_margin="25sp"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.86"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textNombre"
-        app:layout_constraintVertical_bias="0.0" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textNombre" />
 
     <TextView
         android:id="@+id/textSexo"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_margin="25sp"
-        android:layout_marginStart="40dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="25dp"
         android:fontFamily="sans-serif-smallcaps"
         android:gravity="center"
         android:padding="5sp"
@@ -79,106 +79,131 @@
         android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textApellido"
-        app:layout_constraintVertical_bias="0.02" />
+        app:layout_constraintEnd_toStartOf="@+id/hombreButton"
+        app:layout_constraintTop_toBottomOf="@+id/textApellido" />
 
     <RadioButton
         android:id="@+id/hombreButton"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_margin="25sp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="26dp"
         android:gravity="center"
         android:padding="5sp"
         android:text="Hombre"
         android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/mujerButton"
-        app:layout_constraintTop_toBottomOf="@+id/textApellido"
-        app:layout_constraintVertical_bias="0.019" />
+        app:layout_constraintStart_toEndOf="@+id/textSexo"
+        app:layout_constraintTop_toBottomOf="@+id/textApellido" />
 
     <RadioButton
         android:id="@+id/mujerButton"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_margin="25sp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="20dp"
         android:gravity="center"
         android:padding="5sp"
         android:text="Mujer"
         android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textApellido"
-        app:layout_constraintVertical_bias="0.019" />
+        app:layout_constraintStart_toEndOf="@+id/hombreButton"
+        app:layout_constraintTop_toBottomOf="@+id/textApellido" />
 
     <TextView
         android:id="@+id/fechaNacimiento"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_margin="25sp"
         android:gravity="center"
         android:padding="5sp"
         android:text="Fecha Nacimiento"
-        android:layout_marginRight="200dp"
-        android:layout_marginLeft="0dp"
         android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/datePicker"
-        app:layout_constraintTop_toBottomOf="@+id/textSexo"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hombreButton" />
 
     <Button
         android:id="@+id/datePicker"
         style="?android:spinnerStyle"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginRight="60dp"
-        android:layout_marginLeft="160dp"
+        android:layout_margin="25sp"
+        android:layout_marginTop="33dp"
+        android:background="#464653"
         android:gravity="center"
         android:onClick="abriCalendario"
         android:padding="5sp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="25sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
+        android:text="Seleccionar fecha"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mujerButton"
-        app:layout_constraintVertical_bias="0.051" />
-
+        app:layout_constraintHorizontal_bias="0.68"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fechaNacimiento" />
 
     <Spinner
         android:id="@+id/my_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/datePicker"
-        app:layout_constraintVertical_bias="0.077" />
+        android:layout_width="305dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="29dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/datePicker" />
 
     <Button
         android:id="@+id/sigButton"
-        android:layout_width="147dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_margin="25sp"
+        android:layout_marginBottom="120dp"
+        android:background="#191927"
+        android:gravity="center"
         android:text="Siguiente"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="normal"
-        android:gravity="center"
-        android:background="#191927"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.893"
+        app:layout_constraintHorizontal_bias="0.68"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_spinner"
-        app:layout_constraintVertical_bias="0.037" />
+        app:layout_constraintVertical_bias="0.135" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="52dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="38dp"
+        app:layout_constraintEnd_toStartOf="@+id/my_spinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/datePicker"
+        app:srcCompat="@drawable/grado" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="178dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginBottom="110dp"
+        app:layout_constraintBottom_toTopOf="@+id/textNombre"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/infoPersonal"
+        app:srcCompat="@drawable/hombre" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
