--- a/Lab1-UI/src/main/res/layout-land/activity_contact_data.xml
+++ b/Lab1-UI/src/main/res/layout-land/activity_contact_data.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -19,19 +19,17 @@
         android:text="datos de contacto"
         android:textColor="@color/white"
         android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/editTextPhone" />
 
     <EditText
         android:id="@+id/editTextPhone"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="25dp"
         android:ems="10"
         android:hint="Teléfono"
@@ -41,15 +39,15 @@
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/infoPersonal" />
+        app:layout_constraintTop_toBottomOf="@id/infoPersonal" />
 
     <EditText
         android:id="@+id/editTextAddress"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="25sp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:layout_marginEnd="25dp"
         android:ems="10"
         android:hint="Dirección"
         android:inputType="text"
@@ -58,15 +56,15 @@
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
+        app:layout_constraintTop_toBottomOf="@id/editTextPhone" />
 
     <EditText
         android:id="@+id/editTextEmail"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="25sp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:layout_marginEnd="25dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -75,15 +73,15 @@
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
+        app:layout_constraintTop_toBottomOf="@id/editTextAddress" />
 
     <AutoCompleteTextView
         android:id="@+id/autoCompleteCountry"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="25sp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:layout_marginEnd="25dp"
         android:ems="10"
         android:hint="País"
         android:inputType="text"
@@ -92,15 +90,15 @@
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
+        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />
 
     <AutoCompleteTextView
         android:id="@+id/autoCompleteCity"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="25sp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:layout_marginEnd="25dp"
         android:ems="10"
         android:hint="Ciudad"
         android:inputType="text"
@@ -109,14 +107,13 @@
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/autoCompleteCountry" />
+        app:layout_constraintTop_toBottomOf="@id/autoCompleteCountry" />
 
     <Button
         android:id="@+id/sigButton"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_margin="25sp"
-        android:layout_marginTop="16dp"
         android:background="#191927"
         android:gravity="center"
         android:text="Siguiente"
@@ -125,7 +122,7 @@
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/autoCompleteCity"
-        app:layout_constraintVertical_bias="0.48" />
+        app:layout_constraintTop_toBottomOf="@id/autoCompleteCity"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
